<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="jdroid_appName">Jdroid Sample</string>
	<string name="home">Home</string>
	<string name="add">Add</string>

	<!-- Google AdMob -->
	<string name="adMob">Google AdMob</string>
	<string name="fragmentBanner">Fragment Banner</string>
	<string name="nativeAdExpress">Native Ad Express</string>
	<string name="largeNativeAdExpress">Large Native Ad Express</string>
	<string name="adReycler">Ad Recycler</string>
	<string name="activityBanner">Activity Banner</string>
	<string name="displayInterstitial">Display Interstitial</string>
	<string name="houseAds">House Ads</string>
	<string name="houseAd">House ad</string>

	<!-- Firebase Invites -->
	<string name="appInvite">Firebase Invites</string>

	<!-- Date & Time -->
	<string name="dateTime">Date &amp; Time</string>
	<string name="datePickerDialog">Date Picker Dialog</string>
	<string name="timePickerDialog">Time Picker Dialog</string>

	<!-- Glide -->
	<string name="glide">Glide</string>
	<string name="withActivity">withActivity</string>
	<string name="withFragment">withFragment</string>
	<string name="withApplicationContext">withApplicationContext</string>
	<string name="withNullContext">withNullContext</string>
	<string name="invalidResourceUrl">invalidResourceUrl</string>
	<string name="outOfMemory">outOfMemory</string>

	<!-- Use Cases -->
	<string name="useCases">Use Cases</string>
	<string name="execute">Execute</string>
	<string name="failExecution">Fail Execution</string>
	<string name="failStartNotification">Fail Start Notification</string>
	<string name="failFinishNotification">Fail Finish Notification</string>
	<string name="failFinishFailedNotification">Fail Finish Failed Notification</string>
	<string name="noListener">No Listener (Reload fragment if you change this)</string>
	<string name="onStartUseCase">Starting Use Case</string>
	<string name="onFinishedUseCase">On Finished Use Case</string>
	<string name="onFinishedFailUseCase">On Finished Fail Use Case</string>
	<string name="manualUseCaseTrigger">Manual Use Case Trigger</string>
	<string name="onceUseCaseTrigger">Once Use Case Trigger</string>
	<string name="alwaysUseCaseTrigger">Always Use Case Trigger</string>
	<string name="useCaseTrigger">Use Case Trigger (Reload fragment if you change this)</string>
	<string name="delay">Delay (seconds)</string>

	<!-- Floating Action Button -->

	<string name="floatingActionButton">Floating Action Button</string>

	<!-- Error Displayer -->
	<string name="errorDisplayer">Error Displayer</string>
	<string name="defaultErrorDisplayer">Default Error Displayer</string>
	<string name="defaultErrorDisplayerNotGoBack">Default Error Displayer (Not go back on error)</string>
	<string name="snackbarErrorDisplayer">Snackbar Error Displayer</string>

	<!-- Timer -->
	<string name="timer">Timer</string>
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	<string name="reset">Reset</string>

	<!-- Firebase Database -->
	<string name="firebaseDatabase">Firebase Database</string>
	<string name="firebaseCreate">Create</string>
	<string name="firebaseUpdate">Update</string>
	<string name="firebaseGetAll">Get All</string>
	<string name="firebaseRemove">Remove</string>

	<!-- Firebase Dynamic Links -->
	<string name="firebaseDynamicLinks">Firebase Dynamic Links</string>
	<string name="linkUrl">Link Url</string>
	<string name="minVersionCode">Min Version Code</string>
	<string name="fallbackLink">Fallback Link</string>
	<string name="customAppLocation">Custom app location</string>
	<string name="utmMedium">UTM medium</string>
	<string name="utmSource">UTM source</string>
	<string name="utmCampaign">UTM campaign</string>
	<string name="utmTerm">UTM term</string>
	<string name="utmContent">UTM Content</string>
	<string name="shortLink">Short Link</string>
	<string name="longLink">Long Link</string>
	<string name="unguessable">Unguessable short link</string>
	<string name="buildLink">Build Link</string>
	<string name="shortenLink">Shorten Link</string>

	<!-- Analytics -->
	<string name="analytics">Analytics</string>
	<string name="sendExampleEvent">Send Example Event</string>
	<string name="sendExampleTransaction">Send Example Transaction</string>
	<string name="sendExampleTiming">Send Example Timing</string>

	<!-- Firebase Cloud Messaging -->
	<string name="fcm">Firebase Cloud Messaging</string>
	<string name="registerDevice">Register Device</string>
	<string name="registerDeviceAndUpdateLastActiveTimestamp">Register Device &amp; Update Last Active Timestamp</string>
	<string name="removeInstanceId">Remove Instance Id</string>
	<string name="removeDevice">Remove Device</string>
	<string name="sendPush">Send Push</string>
	<string name="messageKey">Message Key</string>
	<string name="minAppVersionCode">MinAppVersionCode</string>
	<string name="minDeviceOsVersion">MinDeviceOsVersion</string>
	<string name="senderId">Sender Id</string>
	<string name="googleServerApiKey">Google Server Api Key</string>

	<!-- Google Maps -->
	<string name="googleMaps">Google Maps</string>
	<string name="fullMap">Full Map</string>
	<string name="liteModeMap">Lite Mode Map</string>
	<string name="streetView">Street View</string>

	<!-- Google Sign In -->
	<string name="revokeAccess">Revoke</string>
	<string name="notLogged">Not Logged</string>
	<string name="connectionFailed">Connection Failed</string>

	<!-- Google Play Services -->
	<string name="googlePlayServices">Google Play Services</string>
	<string name="checkGooglePlayServices">Check Google Play Services</string>
	<string name="openGooglePlayServices">Open Google Play Services</string>

	<!-- Http -->
	<string name="http">Http</string>
	<string name="httpGet">GET</string>
	<string name="httpPost">POST</string>
	<string name="httpPut">PUT</string>
	<string name="httpDelete">DELETE</string>
	<string name="httpPatch">PATCH</string>
	<string name="unexpectedExceptionParser">Unexpected Exception Parser</string>
	<string name="connectionExceptionParser">Connection Exception Parser</string>

	<!-- Card View -->
	<string name="cardView">Card View</string>
	<string name="simpleCardView">Simple Card View</string>
	<string name="cardViewInsideRecyclerView">Card View inside Recycler View</string>
	<string name="cardViewTitle">Card View Title</string>
	<string name="cardViewContent">Card View Content</string>
	<string name="cardViewClickableTitle">Card View Clickable Title</string>
	<string name="cardViewClickableContent">Card View Clickable Content</string>

	<!-- Nav Drawer -->
	<string name="navDrawer">Nav Drawer</string>
	<string name="leftCustomNavDrawer">Left Custom Nav Drawer</string>
	<string name="rightCustomNavDrawer">Right Custom Nav Drawer</string>
	<string name="noNavDrawer">No Nav Drawer</string>
	<string name="userNavDrawer">User Nav Drawer</string>

	<!-- In App Billing -->
	<string name="inAppBilling">Google In App Billing</string>

	<!-- Notifications -->
	<string name="notifications">Notifications</string>
	<string name="notificationName">Notification name</string>
	<string name="notificationChannel">Notification channel</string>
	<string name="contentTitle">Content title</string>
	<string name="contentText">Content text</string>
	<string name="url">Url</string>
	<string name="largeIconUrl">Large icon url</string>
	<string name="largeIconDrawable">Large icon drawable</string>
	<string name="sendNotification">Send Notification</string>
	<string name="cancelNotifications">Cancel Notifications</string>
	<string name="contentTitleSample">Title example</string>
	<string name="contextTextSample">Description example</string>
	<string name="lowImportanceNotificationChannelName">Notification channel lowImportance</string>
	<string name="defaultImportanceNotificationChannelName">Notification channel defaultImportance</string>
	<string name="highImportanceNotificationChannelName">Notification channel highImportance</string>

	<!-- Toasts -->
	<string name="toasts">Toasts</string>
	<string name="displayToastFromUIThread">Display Toast From UI Thread</string>
	<string name="toastFromUIThread">Toast From UI Thread</string>
	<string name="displayToastFromWorkerThread">Display Toast From Worker Thread</string>
	<string name="toastFromWorkerThread">Toast From Worker Thread</string>

	<!-- Tablets -->
	<string name="tablets">Tablets</string>
	<string name="leftAction">Left Action</string>
	<string name="rightAction">Right Action</string>

	<!-- Twitter -->
	<string name="twitter">Twitter</string>
	<string name="listTweetHelper">List Tweet Helper</string>
	<string name="cyclingTweetHelper">Cycling Tweet Helper</string>

	<!-- Uri Mapper -->
	<string name="uriMapper">Uri Mapper</string>
	<string name="uriMapperSingleTop">Single Top</string>
	<string name="uriMapperNoFlags">No Flags</string>
	<string name="matchError">Match Error</string>
	<string name="mainIntentError">Main Intent Error</string>
	<string name="defaultIntentError">Default Intent Error</string>
	<string name="matchNewActivity">Match New Activity</string>
	<string name="noMatchNewActivity">No Match New Activity</string>
	<string name="matchSameActivity">Match Same Activity</string>
	<string name="noMatchSameActivity">No Match Same Activity</string>
	<string name="matchNullIntent">Match Null Intent</string>
	<string name="noMatchNullIntent">No Match Null Intent</string>

	<!-- Loading -->
	<string name="loading">Loading &amp; Refresh</string>
	<string name="blockingLoading">Blocking Loading</string>
	<string name="customBlockingLoading">Custom Blocking Loading</string>
	<string name="showLoading">Show Loading</string>
	<string name="dismissLoading">Dismiss Loading</string>
	<string name="nonBlockingLoading">Non Blocking Loading</string>
	<string name="swipeRefresLoading">Swipe Refresh Loading</string>
	<string name="fail">Fail</string>

	<!-- Hero -->
	<string name="hero">Hero &amp; Parallax</string>

	<!-- Rate App -->
	<string name="rateApp">Rate App</string>

	<!-- Recycler View -->
	<string name="recyclerView">Recycler View</string>
	<string name="simpleRecycler">Simple Recycler</string>
	<string name="complexRecycler">Complex Recycler</string>
	<string name="paginatedRecycler">Paginated Recycler</string>
	<string name="paginatedGridRecycler">Paginated Grid Recycler</string>
	<string name="searchPaginatedRecycler">Search Paginated Recycler</string>
	<string name="autofitGridLayoutRecycler">Autofit Grid Recycler</string>
	<string name="noResults">No Results</string>
	<string name="addItem">Add Item</string>
	<string name="addItems">Add Items</string>
	<string name="removeFirstItem">Remove First Item</string>
	<string name="removeSecondItem">Remove Second Item</string>
	<string name="addHeader">Add header</string>
	<string name="addClickableHeader">Add clickable header</string>
	<string name="removeHeader">Remove header</string>
	<string name="addFooter">Add footer</string>
	<string name="addClickableFooter">Add clickable footer</string>
	<string name="removeFooter">Remove footer</string>
	<string name="clearItems">Clear Items</string>
	<string name="clickableFooter">clickable footer</string>
	<string name="clickableHeader">clickable header</string>
	<string name="footer">footer</string>
	<string name="header">header</string>

	<!-- SQLite -->
	<string name="sqlite">SQLite</string>
	<string name="sqliteAdd">Add</string>
	<string name="sqliteUpdate">Update</string>
	<string name="sqliteRemove">Remove</string>
	<string name="sqliteRemoveAll">Remove All</string>
	<string name="sqliteGetAll">Get All</string>
	<string name="sqliteReplaceAll">Replace All</string>

	<!-- Service -->
	<string name="service">Service</string>
	<string name="workerService">Worker Service</string>
	<string name="useCaseService">Use Case Service</string>
	<string name="firebaseJobService">Firebase Job Service</string>
	<string name="commandService1">Command Service 1</string>
	<string name="commandService2">Command Service 2</string>
	<string name="commandService3">Command Service 3</string>
	<string name="commandService4">Command Service 4</string>
	<string name="commandService5">Command Service 5</string>
	<string name="cancelAllJobs">Cancel All Jobs</string>

	<!-- StrictMode -->
	<string name="strictMode">Strict Mode</string>
	<string name="diskAccessOnMainThread">Disk Access on Main Thread</string>

	<!-- Tablets -->
	<string name="openDetail">Open Detail</string>

	<!-- Widgets -->
	<string name="sampleWidget">Sample Widget</string>

	<!-- About -->
	<string name="shareMessage">Jdroid - Tools for Android and Java apps. Download the sample app on your Android.
		%1$s</string>

</resources>
